--- a/network/base/docker-compose-base.yaml
+++ b/network/base/docker-compose-base.yaml
@@ -37,7 +37,7 @@ services:
     environment:
       - CORE_PEER_ID=anchor.awesome.agency
       - CORE_PEER_ADDRESS=anchor.awesome.agency:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer.awesome.agency:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=anchor.awesome.agency:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=anchor.awesome.agency:7051
       - CORE_PEER_LOCALMSPID=AwesomeAgencyMSP
     volumes:
@@ -76,29 +76,6 @@ services:
       - 8051:7051
       - 8053:7053
 
-  anchor.pharmatic.com:
-    container_name: anchor.pharmatic.com
-    extends:
-      file: peer-base.yaml
-      service: peer-base
-    environment:
-      - CORE_PEER_ID=anchor.pharmatic.com
-      - CORE_PEER_ADDRESS=anchor.pharmatic.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=anchor.pharmatic.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer.pharmatic.com:7051
-      - CORE_PEER_LOCALMSPID=PharmaticMSP
-    volumes:
-        - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/pharmatic.com/peers/anchor.pharmatic.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/pharmatic.com/users/:/etc/hyperledger/fabric/users
-        - ../crypto-config/peerOrganizations/pharmatic.com/peers/anchor.pharmatic.com/tls:/etc/hyperledger/fabric/tls
-        - ../channel-artifacts/:/var/hyperledger/fabric/artifacts
-        - ../crypto-config/ordererOrganizations/foi.org/msp/tlscacerts:/etc/hyperledger/fabric/orderer_tls
-        - anchor.pharmatic.com:/var/hyperledger/production
-    ports:
-      - 9051:7051
-      - 9053:7053
-
   peer.pharmatic.com:
     container_name: peer.pharmatic.com
     extends:
@@ -108,7 +85,7 @@ services:
       - CORE_PEER_ID=peer.pharmatic.com
       - CORE_PEER_ADDRESS=peer.pharmatic.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer.pharmatic.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=anchor.pharmatic.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer.pharmatic.com:7051
       - CORE_PEER_LOCALMSPID=PharmaticMSP
     volumes:
         - /var/run/:/host/var/run/
@@ -121,3 +98,26 @@ services:
     ports:
       - 10051:7051
       - 10053:7053
+
+  peer.magik.com:
+    container_name: peer.magik.com
+    extends:
+      file: peer-base.yaml
+      service: peer-base
+    environment:
+      - CORE_PEER_ID=peer.magik.com
+      - CORE_PEER_ADDRESS=peer.magik.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer.magik.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=anchor.magik.com:7051
+      - CORE_PEER_LOCALMSPID=PharmaticMSP
+    volumes:
+        - /var/run/:/host/var/run/
+        - ../crypto-config/peerOrganizations/magik.com/peers/peer.magik.com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/magik.com/users/:/etc/hyperledger/fabric/users
+        - ../crypto-config/peerOrganizations/magik.com/peers/peer.magik.com/tls:/etc/hyperledger/fabric/tls
+        - ../channel-artifacts/:/var/hyperledger/fabric/artifacts
+        - ../crypto-config/ordererOrganizations/foi.org/msp/tlscacerts:/etc/hyperledger/fabric/orderer_tls
+        - peer.magik.com:/var/hyperledger/production
+    ports:
+      - 11051:7051
+      - 11053:7053
