--- a/network/configtx.yaml
+++ b/network/configtx.yaml
@@ -79,7 +79,29 @@ Organizations:
                 Rule: "OR('PharmaticMSP.admin')"
 
         AnchorPeers:
-            - Host: anchor.pharmatic.com
+            - Host: peer.pharmatic.com
+              Port: 7051
+
+    - &Magik
+        Name: MagikMSP
+
+        ID: MagikMSP
+
+        MSPDir: crypto-config/peerOrganizations/magik.dev/msp
+
+        Policies:
+            Readers:
+                Type: Signature
+                Rule: "OR('MagikMSP.admin', 'MagikMSP.peer', 'MagikMSP.client')"
+            Writers:
+                Type: Signature
+                Rule: "OR('MagikMSP.admin', 'MagikMSP.client')"
+            Admins:
+                Type: Signature
+                Rule: "OR('MagikMSP.admin')"
+
+        AnchorPeers:
+            - Host: peer.magik.dev
               Port: 7051
 
 ################################################################################
@@ -290,6 +312,7 @@ Profiles:
                 Organizations:
                     - *AwesomeAgency
                     - *Pharmatic
+                    - *Magik
     ContractorChannel:
         Consortium: SampleConsortium
         Application:
@@ -297,5 +320,6 @@ Profiles:
             Organizations:
                 - *AwesomeAgency
                 - *Pharmatic
+                - *Magik
             Capabilities:
                 <<: *ApplicationCapabilities
