--- a/network/crypto-config.yaml
+++ b/network/crypto-config.yaml
@@ -7,6 +7,7 @@ OrdererOrgs:
 PeerOrgs:
   - Name: Awesome Agency
     Domain: awesome.agency
+    EnableNodeOUs: true
     Specs:
       - Hostname: anchor
       - Hostname: peer
@@ -15,6 +16,7 @@ PeerOrgs:
 
   - Name: Pharmatic AG
     Domain: pharmatic.com
+    EnableNodeOUs: true
     Specs:
       - Hostname: peer
     Users:
@@ -22,6 +24,7 @@ PeerOrgs:
 
   - Name: Magik Intl.
     Domain: magik.org
+    EnableNodeOUs: true
     Specs:
       - Hostname: peer
     Users:
