--- a/api/modd.conf
+++ b/api/modd.conf
@@ -1,3 +1,3 @@
 **/*.go {
-    daemon +sigterm: dlv debug --headless --listen=:8008 --api-version=2 --accept-multiclient
+    daemon +sigterm: rm -rf ./on && dlv debug --headless --listen=:8008 --api-version=2 --accept-multiclient
 }
